--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "MongsangGa"
+  subheading: "Posting solved BOJ and Full-stack devlop skills"
   banner: "Your image url"
